<resources>
    <string name="app_name">ItprogerApp</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_me">Press me</string>
    <string name="hi_admin">Hi, Admin</string>
    <string name="your_personal_account">Your personal account</string>
    <string name="personal_account">Personal account</string>
    <string name="main">Main</string>
    <string name="contacts">Contacts</string>
    <string name="blog">Blog</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_bio">Enter bio</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="logo_text">Calculator</string>
    <string name="hint_1">Enter first number</string>
    <string name="hint_2">Enter second number</string>
    <string name="add_numbers">Add numbers</string>
    <string name="logo">Logo</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
</resources>