<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_100"
    tools:context=".textEditor.MainTextEditorActivity" >

    <RelativeLayout
        android:id="@+id/upper_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/bright_blue_100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hi_admin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/your_personal_account"
            android:textColor="@color/silver_100"
            android:textSize="14sp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="40dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_box"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/upper_background"
        android:background="@color/white"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-80dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/bright_blue_300"
            android:text="@string/personal_account" />
    </RelativeLayout>

    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_box"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/user_bio_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_name_field"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_bio"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_bio_field"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/bright_blue_300"
        android:onClick="saveDate"
        android:text="@string/save" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_bio_field"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/bright_blue_300"
        android:onClick="getDate"
        android:text="@string/download" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/bright_blue_200"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/main"
            android:backgroundTint="@color/bright_blue_300">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:backgroundTint="@color/bright_blue_300">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/blog"
            android:backgroundTint="@color/bright_blue_300">
        </Button>
    </LinearLayout>
</RelativeLayout>

