<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ContactsActivity"
    >

    <RelativeLayout
        android:id="@+id/upper_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bright_blue_100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hi_admin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/your_personal_account"
            android:textColor="@color/silver_100"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_below="@+id/upper_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_above="@+id/bottom_menu"
        />

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/bright_blue_200"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/bright_blue_300"
            android:onClick="goHome"
            android:text="@string/main"
            />

        <Button
            android:id="@+id/contacts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:backgroundTint="@color/bright_blue_300"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/blog"
            android:backgroundTint="@color/bright_blue_300"
            />
    </LinearLayout>
</RelativeLayout>
