<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator.CalculatorActivity"
    android:background="@color/silver_100">

    <TextView
        android:text="@string/logo_text"
        android:textSize="25sp"
        android:textColor="@color/bright_blue_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:fontFamily="@font/montserrat_bold" />

    <EditText
        android:id="@+id/number_field_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/hint_1"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:minHeight="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number_field_2"
        android:hint="@string/hint_2"
        app:layout_constraintTop_toBottomOf="@+id/number_field_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:minHeight="48dp" />

    <Button
        android:text="@string/add_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/number_field_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="30dp"
        android:backgroundTint="@color/bright_blue_300" />
</androidx.constraintlayout.widget.ConstraintLayout>
